--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="container">
         <div class="content">
             <div class="row">
-                <h1 class="text-center ml-auto mr-auto col-xs-12">Get better education Not<br> just a degree </h1>
+                <h1 class="text-center ml-auto mr-auto col-xs-12">Get better education Not<br class="d-none d-md-block"> just a degree </h1>
                 <p>Learn your fevorite course today with education learning center</p>
                 <div class="ml-auto  mr-auto">
                     <div class="option">
@@ -133,6 +133,33 @@
 </section>
     <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
     -----------------------------------------End Main----------------------------------------------
+    //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
+    -----------------------------------------Satrt University----------------------------------------------
+    //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+<section class="university">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-xs-12">
+                <div class="content">
+                    <h2 class="h1 mb-3 mt-5">Our University</h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore.</p>
+                    <div class="comment">
+                        <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore.</p>
+                        <p class="name ml-3">Johan Doe</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-xs-12">
+                <div class="content">
+                    <img src="imgs/child.png" alt="child">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+    <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
+    -----------------------------------------End University----------------------------------------------
     //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
     <script src="js/jquery-3.5.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
