--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
     -----------------------------------------Start full----------------------------------------------
     //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
     <section class="full">
-        <div class="container">
         <div class="row">
                 <div class="col-md-6 col-xs-12">
-                    <div class="img"></div>
+                    <div class="img d-lg-block d-md-block d-sm-none d-xs-none"></div>
+                    <img class="d-lg-none d-md-none d-sm-block d-xs-block" src="imgs/img3.jpg" alt="img3">
                 </div>
                 <div class="col-md-6 col-xs-12">
                     <div class="content">
@@ -236,9 +236,9 @@
                     </div>
                 </div>
         </div>
-            <div class="col-md-6 col-xs-12">
-                <div class="img img2"></div>
-            </div>
+        <div class="col-md-6 col-xs-12">
+            <div class="img2 d-sm-block d-xs-none"></div>
+            <img class="d-lg-none d-md-none d-sm-block d-xs-block" src="imgs/img4.jpg" alt="img3">
         </div>
         </div>
     </section>
