--- a/index.html
+++ b/index.html
@@ -311,6 +311,204 @@
      <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
     -----------------------------------------End Upcoming  ----------------------------------------------
     //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
+    -----------------------------------------Start testmonial  ----------------------------------------------
+    //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+<section class="testmonial text-center">
+    <div class="overlay">
+        <div class="container">
+            <h2>What Peoples Say About Us?</h2>
+            <p class="title">Lorem ipsum dolro sit amet trending courses</p>
+             <div class="row">
+                <div class="col-lg-4 col-xs-12">
+                    <div class="content rounded">
+                        <p> " Awesome experience, It is a long established fact that a reader will be distracted by the readable content of a page when
+                            looking at its layout. "</p>
+                            <div class="font">
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                            </div>
+                    </div>
+                    <div class="img-content">
+                        <img class="rounded-circle" src="imgs/avatar1.jpg" alt="avtar1">
+                        <div class="info">
+                            <h5>Abraham Linken</h5>
+                            <p>John Doe from MBA</p>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="col-lg-4 col-xs-12">
+                    <div class="content rounded">
+                        <p> " Awesome experience, It is a long established fact that a reader will be distracted by the readable content of a page when
+                            looking at its layout. "</p>
+                            <div class="font">
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                            </div>
+                    </div>
+                    <div class="img-content">
+                        <img class="rounded-circle" src="imgs/avatar2.jpg" alt="avtar1">
+                        <div class="info">
+                            <h5>Abraham Linken</h5>
+                            <p>John Doe from MBA</p>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="col-lg-4 col-xs-12">
+                    <div class="content rounded">
+                        <p> " Awesome experience, It is a long established fact that a reader will be distracted by the readable content of a page when
+                            looking at its layout. "</p>
+                            <div class="font">
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                            </div>
+                    </div>
+                    <div class="img-content">
+                        <img class="rounded-circle" src="imgs/avatar3.jpg" alt="avtar1">
+                        <div class="info">
+                            <h5>Abraham Linken</h5>
+                            <p>John Doe from MBA</p>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+             </div>
+        </div>
+    </div>
+</section>
+    <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
+    -----------------------------------------End testmonial  ----------------------------------------------
+    //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+     <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
+    -----------------------------------------Start Join  ----------------------------------------------
+    //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+<section class="Join text-center">
+    <div class="container">
+        <div class="mx-auto">
+               <h3>Join our mailing list today and <br class="d-none d-lg-block d-md-block">get extra benefits</h3>
+                <p>over 15000 students using our mail list for offers & discounts</p>
+                <div class="but">
+                    <input type="email" placeholder="Type Your Mail">
+                    <button><i class="fa fa-paper-plane"></i></button>
+                </div>
+        </div>
+        </div>
+</section>
+     <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
+    -----------------------------------------End Join  ----------------------------------------------
+    //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+     <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
+    -----------------------------------------Start Footer  ----------------------------------------------
+    //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+<section class="Footer">
+    <div class="container">
+        <div class="row">
+            <div class="content col-lg-3 col-sm-6">
+                <ul class="list-unstyled">
+                    <p>Popular Courses</p>
+                    <li>Business managment</li>
+                    <hr>
+                    <li>Sports <span class="num">18</span></li>
+                    <hr>
+                    <li>Web Design & Development</li>
+                    <hr>
+                    <li>Wordpress / CMS Integration</li>
+                    <hr>
+                    <li>Personality / Skills Development</li>
+                </ul>
+            </div>
+            <div class="content col-lg-3 col-sm-6">
+                <ul class="list-unstyled">
+                    <p>Upcoming Events</p>
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row no-gutters">
+                          <div class="col-md-4">
+                            <img src="imgs/img2.jpg" class="card-img" alt="$">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <p class="card-title">Web Conference in London.</p>
+                              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    <hr>
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row no-gutters">
+                          <div class="col-md-4">
+                            <img src="imgs/img4.jpg" class="card-img" alt="$">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <p class="card-title">Web Conference in London.</p>
+                              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    <hr>
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row no-gutters">
+                          <div class="col-md-4">
+                            <img src="imgs/img3.jpg" class="card-img" alt="$">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                              <p class="card-title">Web Conference in London.</p>
+                              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </ul>
+            </div>
+            <div class="content col-lg-3 col-sm-6">
+                <ul class="list-unstyled">
+                    <p>Useful Links</p>
+                    <li>About Us</li>
+                    <hr>
+                    <li>Courses <span class="num">48</span></li>
+                    <hr>
+                    <li>Blog & News</li>
+                    <hr>
+                    <li>Terms & Condditions</li>
+                    <hr>
+                    <li>Privacy & Policy</li>
+                </ul>
+            </div>
+            <div class="content col-lg-3 col-sm-6">
+                <ul class="list-unstyled">
+                    <p>Opening Hours</p>
+                    <li>Monday - Friday  <i class="fa fa-arrow-right mr-2 ml-2" aria-hidden="true"></i>  8:AM To 4:PM</li>
+                    <hr>
+                    <li>Saturday  <i class="fa fa-arrow-right mr-2 ml-2" aria-hidden="true"></i>  9:Am to 1:Pm</li>
+                    <hr>
+                    <li>Sunday  <i class="fa fa-arrow-right mr-2 ml-2" aria-hidden="true"></i>  Closed</li>
+        
+                </ul>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="Copyright text-center">
+        Copyright &copy; <a href="https://www.facebook.com/ahmed.safwat2018" target="_blank">Ahmed Safwat</a>
+    </div>
+</section>
+     <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
+    -----------------------------------------End Footer  ----------------------------------------------
+    //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
     <script src="js/jquery-3.5.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/blugin.js"></script>
