--- a/index.html
+++ b/index.html
@@ -509,6 +509,15 @@
      <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
     -----------------------------------------End Footer  ----------------------------------------------
     //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
+    -----------------------------------------Satart Preloader  ----------------------------------------------
+    //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+    <div id="preloader">
+        <div id="preloader-inner"></div>
+    </div>
+    <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////
+    -----------------------------------------End Preloader  ----------------------------------------------
+    //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
     <script src="js/jquery-3.5.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/blugin.js"></script>
