--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
            <div class="row">
                <div class="col-md-5 offset-md-1 col-xs-12">
                    <div class="content rounded">
-                       <img src="imgs/img1.jpg" alt="img1">
+                       <img src="imgs/img1.png" alt="img1">
                        <div class="overlay">
                            <h4> Business Managment</h4>
                            <p>Seats - 143/150</p>
@@ -180,7 +180,7 @@
                </div>
                <div class="col-md-5 col-xs-12">
                 <div class="content rounded">
-                    <img src="imgs/img2.jpg" alt="img1">
+                    <img src="imgs/img2.png" alt="img1">
                     <div class="overlay">
                         <h4>Sports & health courses</h4>
                         <p>Seats - 143/150</p>
@@ -200,7 +200,7 @@
         <div class="row">
                 <div class="col-md-6 col-xs-12">
                     <div class="img d-lg-block d-md-block d-sm-none d-xs-none"></div>
-                    <img class="d-lg-none d-md-none d-sm-block d-xs-block" src="imgs/img3.jpg" alt="img3">
+                    <img class="d-lg-none d-md-none d-sm-block d-xs-block" src="imgs/img3.png" alt="img3">
                 </div>
                 <div class="col-md-6 col-xs-12">
                     <div class="content">
@@ -238,7 +238,7 @@
         </div>
         <div class="col-md-6 col-xs-12">
             <div class="img2 d-sm-block d-xs-none"></div>
-            <img class="d-lg-none d-md-none d-sm-block d-xs-block" src="imgs/img4.jpg" alt="img3">
+            <img class="d-lg-none d-md-none d-sm-block d-xs-block" src="imgs/img4.png" alt="img3">
         </div>
         </div>
     </section>
@@ -280,7 +280,7 @@
         <div class="row">
             <div class="col-md-6 col-lg-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="imgs/img6.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="imgs/img6.png" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Web conference in London.</p>
                       <p class="card-text"><small class="text-muted">On 20 June 2018</small></p>
@@ -289,7 +289,7 @@
             </div>
             <div class="col-md-6 col-lg-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="imgs/img1.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="imgs/img1.png" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Web conference in London.</p>
                       <p class="card-text"><small class="text-muted">On 20 June 2018</small></p>
@@ -298,7 +298,7 @@
             </div>
             <div class="col-md-6 col-lg-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="imgs/img7.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="imgs/img7.png" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Web conference in London.</p>
                       <p class="card-text"><small class="text-muted">On 20 June 2018</small></p>
@@ -434,7 +434,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
                           <div class="col-md-4">
-                            <img src="imgs/img2.jpg" class="card-img" alt="$">
+                            <img src="imgs/img2.png" class="card-img" alt="$">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -448,7 +448,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
                           <div class="col-md-4">
-                            <img src="imgs/img4.jpg" class="card-img" alt="$">
+                            <img src="imgs/img4.png" class="card-img" alt="$">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
@@ -462,7 +462,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
                           <div class="col-md-4">
-                            <img src="imgs/img3.jpg" class="card-img" alt="$">
+                            <img src="imgs/img3.png" class="card-img" alt="$">
                           </div>
                           <div class="col-md-8">
                             <div class="card-body">
